syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";

package client_side_streaming;

service ClientStream {
  rpc SendMessage (stream Messages) returns (Empty);
}

message Messages {
  repeated Message messages = 1;
}

message Message {
  float accuracy = 1;
  string timestamp = 2;
  Location location = 3;
}

message Location {
  double lat = 1;
  double long = 2;
}

message Empty {}